# lamware

./: .ansible-lint  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ansible/: local-test.yml  requirements.yml  site.yml
ansible/inventory/: hosts.example
ansible/vars/: main.yml  main.yml.example  secrets.yml.example
aws/bootstrap/: main.tf  outputs.tf  variables.tf
aws/envs/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
aws/modules/api/: main.tf  outputs.tf  variables.tf
aws/modules/lambda/: main.tf  outputs.tf  variables.tf
aws/modules/rds/: main.tf  outputs.tf  variables.tf
docs/: COST_ESTIMATE.md  DECISIONS.md  DEPLOYMENT.md  SECURITY_CONSTRAINTS.md  STATUS.md
ovh/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
packer/: packer.auto.pkrvars.hcl.example  ubuntu-sandbox.pkr.hcl  windows10-guest.pkr.hcl  windows10-office.pkr.hcl  windows11-base.pkr.hcl  windows11-guest.pkr.hcl  windows11-office.pkr.hcl
packer/ansible/: hardening.yml
packer/answer-files/: autounattend.xml  startup.nsh  win11-autounattend.xml
packer/http/: meta-data  user-data
packer/scripts/: boot-helper.sh  manual-win11-install.sh
shared/: backend-aws.hcl
src/: fake_credentials.py  qemu_monitor.py  report_processor.py  sample_submitter.py  vm_agent.py  vm_agent_cape.py
tests/: integration_sqs_agent.py  test_pipeline_e2e.py  test_qemu_monitor.py  test_sample_feeder.py  test_sample_submitter.py
(+70 files in other folders)
